--- a/Anton_che_zval_slark/accounts/templates/index.html
+++ b/Anton_che_zval_slark/accounts/templates/index.html
@@ -24,6 +24,11 @@
     </aside>
     <main>
         {% block content%}
+            {% if greeting %}
+                <h1> {{ greeting }}</h1>
+            {% else %}
+                <h1>Добро пожаловать!</h1>
+            {% endif %}
         {% endblock%}
     </main>
 </body>
