--- a/Anton_che_zval_slark/accounts/templates/index.html
+++ b/Anton_che_zval_slark/accounts/templates/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="">
     <title>{% block title%}{% endblock%}</title>
 </head>
@@ -16,7 +19,11 @@
             <a href="{% url 'home' %}" class="btn btn-outline-dark"><li>Главная</li></a>
             {% if user.is_authenticated %}
             <a href="{% url 'profile' 'all' %}" class="btn btn-outline-dark"><li>Профиль</li></a>
-            <a href="{% url 'logout' %}" class="btn btn-outline-dark"><li>Выйти</li></a>
+            <a href="{% url 'app_add' %}" class="btn btn-outline-dark"><li>Создать заявку</li></a>
+            <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-outline-dark">Выйти</button>
+            </form>
             {% else %}
             <a href="{% url 'registration' %}" class="btn btn-outline-dark"><li>Регистрация</li></a>
             <a href="{% url 'login' %}" class="btn btn-outline-dark"><li>Войти</li></a>
