--- a/Anton_che_zval_slark/accounts/templates/index.html
+++ b/Anton_che_zval_slark/accounts/templates/index.html
@@ -17,6 +17,10 @@
         <h3>Навигация</h3>
         <ul style="list-style-type: none; display: flex; flex-direction: column;">
             <a href="{% url 'home' %}" class="btn btn-outline-dark"><li>Главная</li></a>
+            {% if user.is_superuser %}
+                <a href="{% url 'app_list' %}" class="btn btn-outline-dark"><li>Редактировать заявки</li></a>
+                <a href=" {% url 'category' %}" class="btn btn-outline-dark"><li>Редактировать категории</li></a>
+            {% endif %}
             {% if user.is_authenticated %}
             <a href="{% url 'profile' 'all' %}" class="btn btn-outline-dark"><li>Профиль</li></a>
             <a href="{% url 'app_add' %}" class="btn btn-outline-dark"><li>Создать заявку</li></a>
